# warwright

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
builds/: policy-1v1-a.json  policy-1v1-b.json  warband-a.json  warband-b.json
docs/: BUILD_PLAN.md  ONE_SHOT_PROMPT.md
docs/decisions/: 2026-07-20-gate4-content-and-identity.md
gym/: ENCODING.md  EXPORT.md  TRAINING_RESULTS.md  pyproject.toml
gym/tests/: conftest.py  test_actions.py  test_env.py  test_env_rollout.py  test_evaluate.py  test_evaluate_bridge.py  test_export_policy.py  test_featurize.py  test_inference_parity_fixture.py  test_policy.py  test_ppo.py  test_ppo_smoke.py  test_protocol_golden.py  test_random_rollout.py  test_rewards.py  test_rewards_bridge.py  test_smoke_run_checkpoint.py  test_transport.py
gym/tests/fixtures/: protocol_golden.json
gym/warwright_gym/: __init__.py  actions.py  env.py  featurize.py  observation.py  rewards.py  transport.py
gym/warwright_gym/training/: __init__.py  evaluate.py  export_policy.py  policy.py  ppo.py  smoke_run.py
