[project]
name = "warwright-gym"
version = "0.1.0"
description = "Python client and Gymnasium environment for the Warwright batched gym bridge (#63, #64)."
requires-python = ">=3.12"
dependencies = ["gymnasium>=1.3", "numpy>=2.0"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["warwright_gym"]
