[project]
name = "warwright-gym"
version = "0.1.0"
description = "Python client and Gymnasium environment for the Warwright batched gym bridge (#63, #64)."
requires-python = ">=3.12"
dependencies = ["gymnasium>=1.3", "numpy>=2.0"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]
# torch is CPU-only for this repo: gym/warwright_gym/training's PPO loop
# trains on a single box with no GPU requirement (#65 SUB_PLAN). Pinned to
# the CPU wheel index below so CI (and any contributor's machine) never
# pulls the ~2GB CUDA build.
train = ["torch>=2.6"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# These test modules gate their torch-dependent imports behind
# `pytest.importorskip("torch")` (fix for #65 review finding: a fresh
# clone's `uv run --directory gym pytest`, run WITHOUT the optional
# `train` dependency group, must SKIP these tests cleanly rather than
# erroring at collection) -- the imports that follow the importorskip
# call are necessarily not at the top of the file.
"tests/test_policy.py" = ["E402"]
"tests/test_ppo.py" = ["E402"]
"tests/test_ppo_smoke.py" = ["E402"]
"tests/test_evaluate.py" = ["E402"]
"tests/test_evaluate_bridge.py" = ["E402"]
"tests/test_smoke_run_checkpoint.py" = ["E402"]
"tests/test_export_policy.py" = ["E402"]
"tests/test_inference_parity_fixture.py" = ["E402"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["warwright_gym"]
